--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <meta name="description" content="Description">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/docsify-themeable/dist/css/theme-simple-dark.css">
+  <!-- Theme: Defaults -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">
+
   <style>
-    :root {
-      --content-max-width: auto;
+
+
+    .section-link::before {
+      margin-right: 5px;
+      content: "-"
     }
   </style>
   <script src="//unpkg.com/docsify-copy-code"></script>
@@ -26,6 +31,7 @@
       name: 'The Unit',
       repo: '',
       subMaxLevel: 10,
+      relativePath: true,
       // routerMode: "history"
       search: {
         paths: 'auto',
@@ -40,6 +46,8 @@
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
   <script src="//unpkg.com/docsify-copy-code"></script>
+  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
 </body>
 
 </html>
