update amm specification

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">
 
   <style>
-      .sidebar-nav li {
-        margin-top: 1em;
-        margin-bottom: 1em;
-      }
-      
-      .sidebar-nav p {
-        margin: 0px;
-        display: inline;
-      }
-  
-      .sidebar-nav a {
-        margin: 0px;
-        display: inline;
-      }
-  
-      .sidebar-nav .item-count {
-        display: inline;
-        color: gray;
-        font-size: 12px;
-        padding: var(--sidebar-nav-link-padding);
-      }
-  
-      .section-link::before {
-        margin-right: 5px;
-        content: "-"
-      }
+    .sidebar-nav li {
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
+    
+    .sidebar-nav p {
+      margin: 0px;
+      display: inline;
+    }
+
+    .sidebar-nav a {
+      margin: 0px;
+      display: inline;
+    }
+
+    .sidebar-nav .item-count {
+      display: inline;
+      color: gray;
+      font-size: 12px;
+      padding: var(--sidebar-nav-link-padding);
+    }
+
+    .section-link::before {
+      margin-right: 5px;
+      content: "-"
+    }
   </style>
   <script src="//unpkg.com/docsify-copy-code"></script>
 
@@ -48,7 +48,7 @@
   <script>
     window.$docsify = {
       loadSidebar: true,
-      name: 'The Unit',
+      name: 'Unit',
       repo: '',
       subMaxLevel: 10,
       relativePath: true,
