theme change to improve highlight

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <!-- Theme: Defaults -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-defaults.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 
   <style>
     .sidebar-nav li {
@@ -22,7 +22,7 @@
       display: inline;
     }
 
-    .sidebar-nav a {
+    .sidebar-nav ul li a {
       margin: 0px;
       display: inline;
     }
@@ -34,10 +34,10 @@
       padding: var(--sidebar-nav-link-padding);
     }
 
-    .section-link::before {
+    /*.section-link::before {
       margin-right: 5px;
       content: "-"
-    }
+    }*/
   </style>
   <script src="//unpkg.com/docsify-copy-code"></script>
 
