added Frontier download page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       repo: '',
       subMaxLevel: 10,
       relativePath: true,
+      executeScript: true,
       // routerMode: "history"
       search: {
         paths: 'auto',
@@ -109,6 +110,7 @@
   <script src="//unpkg.com/docsify-copy-code"></script>
   <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
