--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>cryon.io</title>
+  <title>Unit</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="description" content="Application management and deployment unified.">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <!-- Theme: Defaults -->
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/unit-project-logo.ico" />
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-
+  <link rel="stylesheet" href="/assets/styles/typography.css">
   <style>
     :root {
       --theme-color: #A3172A
+    }
+    
+    body {
+      font-family: 'Montserrat', sans-serif
     }
 
     .sidebar ul p.active>a {
