completed xero docs

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       text-decoration: none !important;
     }
 
+    .center-content-horizontaly {
+      display: flex;
+      justify-content: center;
+    }
 
     /*.section-link::before {
       margin-right: 5px;
